// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Westend Asset Hub Proxy > add proxies (with/without delay) to an account, and remove them > events when adding proxies to Alice 1`] = `
[
  {
    "data": {
      "delay": 0,
      "delegatee": "5CPtSx18fqWXWRhG1EJvb7gWZUccuAc5JqMJkiAeamBYM6jR",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Any",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5FP8Sbeh9CUgxakzaaNW9de1xS3M8C6Hc17bLc4T25FfaQot",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "NonTransfer",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5EjWQWNAUtTY3eVxfgmJKbWXzVu6aKtnt2F4RxkD2TgcY729",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "CancelProxy",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5DA2pq8Xbi4WHSK6zKXcnLwpP2PWSQYbHR6VqFtgfh6rSm6U",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Assets",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5ERfWFzu842n1PjTFmX8zhoSoqAtXTUXKhvG6tLkpKD16r7R",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "AssetOwner",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5EDBTjDpSDV3xAm1gr373HT2g9SHDAeBcawvsUyNKHkJem5P",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "AssetManager",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5FU6HSdoHESTZZR8UALSBBTUuPradBjXp3tM51zYx6v9cTks",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Collator",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5E9T15Fzhry3wXjv6dZv1HVtkGBFquAWBXgbdSKxLjPMwVGJ",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Governance",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5FEHRe6ChVWk6tNmaiaWg5msyMpowExUxVd6a9yjFzVaPqTy",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Staking",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5DWpzCgNZsSDyfGiuqmw8eNMj9XtQxQtj3mxR95rc78h47Wi",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "NominationPools",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5EpzGE58zV5DbW8G3fEM5M3jo5BQsEmz6f6vfHD3dmEgMVqM",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "OldSudoBalances",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5Fy4sJiUHFDLrRF9BwDQW3Hg5dAEsb22MaejrCGAR2F8Dzxs",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "OldIdentityJudgement",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5HQrmzch9nWtMnfqDw7SBTi219pzdjYCTJSKmHAh6GNCstzL",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "OldAuction",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5HY9p2uT73BweWs6BC6xwcLvkg5ikxkddcj77KyHNDZf2gc8",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "OldParaRegistration",
    },
    "method": "ProxyAdded",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > add proxies (with/without delay) to an account, and remove them > events when removing all proxies from Alice 1`] = `[]`;

exports[`Westend Asset Hub Proxy > add proxies (with/without delay) to an account, and remove them > events when removing proxies from Alice (batch) 1`] = `
[
  {
    "data": {
      "delay": 0,
      "delegatee": "5CPtSx18fqWXWRhG1EJvb7gWZUccuAc5JqMJkiAeamBYM6jR",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Any",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5FP8Sbeh9CUgxakzaaNW9de1xS3M8C6Hc17bLc4T25FfaQot",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "NonTransfer",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5EjWQWNAUtTY3eVxfgmJKbWXzVu6aKtnt2F4RxkD2TgcY729",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "CancelProxy",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5DA2pq8Xbi4WHSK6zKXcnLwpP2PWSQYbHR6VqFtgfh6rSm6U",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Assets",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5ERfWFzu842n1PjTFmX8zhoSoqAtXTUXKhvG6tLkpKD16r7R",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "AssetOwner",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5EDBTjDpSDV3xAm1gr373HT2g9SHDAeBcawvsUyNKHkJem5P",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "AssetManager",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5FU6HSdoHESTZZR8UALSBBTUuPradBjXp3tM51zYx6v9cTks",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Collator",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5E9T15Fzhry3wXjv6dZv1HVtkGBFquAWBXgbdSKxLjPMwVGJ",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Governance",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5FEHRe6ChVWk6tNmaiaWg5msyMpowExUxVd6a9yjFzVaPqTy",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "Staking",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5DWpzCgNZsSDyfGiuqmw8eNMj9XtQxQtj3mxR95rc78h47Wi",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "NominationPools",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5EpzGE58zV5DbW8G3fEM5M3jo5BQsEmz6f6vfHD3dmEgMVqM",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "OldSudoBalances",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5Fy4sJiUHFDLrRF9BwDQW3Hg5dAEsb22MaejrCGAR2F8Dzxs",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "OldIdentityJudgement",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5HQrmzch9nWtMnfqDw7SBTi219pzdjYCTJSKmHAh6GNCstzL",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "OldAuction",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
  {
    "data": {
      "delay": 0,
      "delegatee": "5HY9p2uT73BweWs6BC6xwcLvkg5ikxkddcj77KyHNDZf2gc8",
      "delegator": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "proxyType": "OldParaRegistration",
    },
    "method": "ProxyRemoved",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when creating pure proxies for Alice 1`] = `
[
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "Any",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "NonTransfer",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "CancelProxy",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "Assets",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "AssetOwner",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "AssetManager",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "Collator",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "Governance",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "Staking",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "NominationPools",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "OldSudoBalances",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "OldIdentityJudgement",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "OldAuction",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "OldParaRegistration",
      "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureCreated",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 0 for Alice 1`] = `
[
  {
    "data": {
      "disambiguationIndex": 0,
      "proxyType": "Any",
      "pure": "5FYBLJ3tp5zZFYWSGPD2SZJcsyufGKxBGPDHrS6TYoa1Ug1K",
      "spawner": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "PureKilled",
    "section": "proxy",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 1 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 2 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 3 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 4 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 5 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 6 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 7 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 8 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 9 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 10 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 11 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 12 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > create and kill pure proxies > events when killing pure proxy of type 13 for Alice 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > assets.create: AssetManager 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > balances.burn: AssetManager 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > events for proxy type AssetManager, pallet assets, call create 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > events for proxy type AssetManager, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > events for proxy type AssetManager, pallet nfts, call destroy 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > events for proxy type AssetManager, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > events for proxy type AssetManager, pallet system, call apply_authorized_upgrade 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Operational",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 190000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > events for proxy type AssetManager, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > events for proxy type AssetManager, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > events for proxy type AssetManager, pallet uniques, call create 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > nfts.destroy: AssetManager 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > staking.bond: AssetManager 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > system.apply_authorized_upgrade: AssetManager 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > system.remark: AssetManager 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > system.remark_with_event: AssetManager 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetManager > uniques.create: AssetManager 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > assets.mint: AssetOwner 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > balances.burn: AssetOwner 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > events for proxy type AssetOwner, pallet assets, call mint 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > events for proxy type AssetOwner, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > events for proxy type AssetOwner, pallet nfts, call set_metadata 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > events for proxy type AssetOwner, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > events for proxy type AssetOwner, pallet system, call apply_authorized_upgrade 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Operational",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 190000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > events for proxy type AssetOwner, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > events for proxy type AssetOwner, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > events for proxy type AssetOwner, pallet uniques, call mint 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > nfts.set_metadata: AssetOwner 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > staking.bond: AssetOwner 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > system.apply_authorized_upgrade: AssetOwner 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > system.remark: AssetOwner 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > system.remark_with_event: AssetOwner 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for AssetOwner > uniques.mint: AssetOwner 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > balances.burn: Assets 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > events for proxy type Assets, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > events for proxy type Assets, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > events for proxy type Assets, pallet system, call apply_authorized_upgrade 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Operational",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 190000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > events for proxy type Assets, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > events for proxy type Assets, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > staking.bond: Assets 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > system.apply_authorized_upgrade: Assets 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > system.remark: Assets 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Assets > system.remark_with_event: Assets 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > balances.burn: CancelProxy 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > events for proxy type CancelProxy, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > events for proxy type CancelProxy, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > events for proxy type CancelProxy, pallet system, call apply_authorized_upgrade 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Operational",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 190000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > events for proxy type CancelProxy, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > events for proxy type CancelProxy, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > staking.bond: CancelProxy 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > system.apply_authorized_upgrade: CancelProxy 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > system.remark: CancelProxy 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for CancelProxy > system.remark_with_event: CancelProxy 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > balances.burn: Collator 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > events for proxy type Collator, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > events for proxy type Collator, pallet referenda, call submit 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": "(redacted)",
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > events for proxy type Collator, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > events for proxy type Collator, pallet system, call apply_authorized_upgrade 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Operational",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 190000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > events for proxy type Collator, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > events for proxy type Collator, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > events for proxy type Collator, pallet vesting, call vested_transfer 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > referenda.submit: Collator 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > staking.bond: Collator 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > system.apply_authorized_upgrade: Collator 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > system.remark: Collator 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > system.remark_with_event: Collator 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Collator > vesting.vested_transfer: Collator 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > balances.burn: Governance 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > events for proxy type Governance, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > events for proxy type Governance, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > events for proxy type Governance, pallet system, call apply_authorized_upgrade 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Operational",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 190000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > events for proxy type Governance, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > events for proxy type Governance, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > events for proxy type Governance, pallet vesting, call vested_transfer 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > staking.bond: Governance 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > system.apply_authorized_upgrade: Governance 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > system.remark: Governance 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > system.remark_with_event: Governance 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Governance > vesting.vested_transfer: Governance 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > balances.burn: NominationPools 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > events for proxy type NominationPools, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > events for proxy type NominationPools, pallet referenda, call submit 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": "(redacted)",
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > events for proxy type NominationPools, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > events for proxy type NominationPools, pallet system, call apply_authorized_upgrade 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Operational",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 190000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > events for proxy type NominationPools, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > events for proxy type NominationPools, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > events for proxy type NominationPools, pallet vesting, call vested_transfer 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > referenda.submit: NominationPools 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > staking.bond: NominationPools 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > system.apply_authorized_upgrade: NominationPools 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > system.remark: NominationPools 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > system.remark_with_event: NominationPools 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NominationPools > vesting.vested_transfer: NominationPools 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NonTransfer > balances.burn: NonTransfer 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NonTransfer > events for proxy type NonTransfer, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NonTransfer > events for proxy type NonTransfer, pallet referenda, call submit 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": "(redacted)",
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NonTransfer > events for proxy type NonTransfer, pallet vesting, call vested_transfer 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NonTransfer > referenda.submit: NonTransfer 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for NonTransfer > vesting.vested_transfer: NonTransfer 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > balances.burn: Staking 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > events for proxy type Staking, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > events for proxy type Staking, pallet referenda, call submit 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": "(redacted)",
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > events for proxy type Staking, pallet system, call apply_authorized_upgrade 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Operational",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 190000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > events for proxy type Staking, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > events for proxy type Staking, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > events for proxy type Staking, pallet vesting, call vested_transfer 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > referenda.submit: Staking 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > system.apply_authorized_upgrade: Staking 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > system.remark: Staking 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > system.remark_with_event: Staking 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for forbidden proxy calls > forbidden proxy calls for Staking > vesting.vested_transfer: Staking 1`] = `
{
  "err": {
    "module": {
      "error": "0x05000000",
      "index": 0,
    },
  },
}
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet balances, call burn 1`] = `
[
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet multisig, call as_multi 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 41,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet nomination_pools, call chill 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x0b000000",
            "index": 81,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet proxy, call reject_announcement 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x01000000",
            "index": 42,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet proxy, call remove_announcement 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x01000000",
            "index": 42,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet referenda, call submit 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
      "proposal": {
        "Inline": "0x00001468656c6c6f",
      },
      "track": 30,
    },
    "method": "Submitted",
    "section": "referenda",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
      "stash": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
      "sender": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Remarked",
    "section": "system",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Any > events for proxy type Any, pallet vesting, call vested_transfer 1`] = `
[
  {
    "data": {
      "account": "5HGjWAeFDfFCWPsjFQdVV2Msvz2XtMktvgocEZcCj68kUMaw",
      "scheduleIndex": 0,
    },
    "method": "VestingCreated",
    "section": "vesting",
  },
  {
    "data": {
      "account": "5HGjWAeFDfFCWPsjFQdVV2Msvz2XtMktvgocEZcCj68kUMaw",
    },
    "method": "VestingCompleted",
    "section": "vesting",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetManager > events for proxy type AssetManager, pallet assets, call mint 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Token": "CannotCreate",
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetManager > events for proxy type AssetManager, pallet multisig, call as_multi 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 41,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetManager > events for proxy type AssetManager, pallet nfts, call set_metadata 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 52,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetManager > events for proxy type AssetManager, pallet uniques, call mint 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x02000000",
            "index": 51,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetManager > events for proxy type AssetManager, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetManager > events for proxy type AssetManager, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetManager > events for proxy type AssetManager, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetOwner > events for proxy type AssetOwner, pallet assets, call create 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 50,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetOwner > events for proxy type AssetOwner, pallet multisig, call as_multi 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 41,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetOwner > events for proxy type AssetOwner, pallet nfts, call destroy 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 52,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetOwner > events for proxy type AssetOwner, pallet uniques, call create 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 51,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetOwner > events for proxy type AssetOwner, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetOwner > events for proxy type AssetOwner, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for AssetOwner > events for proxy type AssetOwner, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet assets, call create 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 50,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet assets, call mint 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Token": "CannotCreate",
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet multisig, call as_multi 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 41,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet nfts, call destroy 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 52,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet nfts, call set_metadata 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 52,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet uniques, call create 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 51,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet uniques, call mint 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x02000000",
            "index": 51,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Assets > events for proxy type Assets, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for CancelProxy > events for proxy type CancelProxy, pallet multisig, call as_multi 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 41,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for CancelProxy > events for proxy type CancelProxy, pallet proxy, call reject_announcement 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x01000000",
            "index": 42,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for CancelProxy > events for proxy type CancelProxy, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for CancelProxy > events for proxy type CancelProxy, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for CancelProxy > events for proxy type CancelProxy, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Collator > events for proxy type Collator, pallet collator_selection, call register_as_candidate 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x08000000",
            "index": 21,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Collator > events for proxy type Collator, pallet multisig, call as_multi 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 41,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Collator > events for proxy type Collator, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Collator > events for proxy type Collator, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Collator > events for proxy type Collator, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Governance > events for proxy type Governance, pallet referenda, call submit 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
      "proposal": {
        "Inline": "0x00001468656c6c6f",
      },
      "track": 30,
    },
    "method": "Submitted",
    "section": "referenda",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Governance > events for proxy type Governance, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Governance > events for proxy type Governance, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Governance > events for proxy type Governance, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NominationPools > events for proxy type NominationPools, pallet nomination_pools, call chill 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x0b000000",
            "index": 81,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NominationPools > events for proxy type NominationPools, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NominationPools > events for proxy type NominationPools, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NominationPools > events for proxy type NominationPools, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet multisig, call as_multi 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 41,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet nomination_pools, call chill 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x0b000000",
            "index": 81,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet proxy, call reject_announcement 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x01000000",
            "index": 42,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet proxy, call remove_announcement 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x01000000",
            "index": 42,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
      "stash": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet system, call remark 1`] = `
[
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 370000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet system, call remark_with_event 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
      "sender": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Remarked",
    "section": "system",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 380000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for NonTransfer > events for proxy type NonTransfer, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Staking > events for proxy type Staking, pallet nomination_pools, call chill 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x0b000000",
            "index": 81,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Staking > events for proxy type Staking, pallet staking, call bond 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
      "stash": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Staking > events for proxy type Staking, pallet staking, call register_fast_unstake 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x00000000",
            "index": 82,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Staking > events for proxy type Staking, pallet utility, call batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Staking > events for proxy type Staking, pallet utility, call batch_all 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > filtering tests for permitted proxy calls > allowed proxy calls for Staking > events for proxy type Staking, pallet utility, call force_batch 1`] = `
[
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > perform proxy call on behalf of delegator > events when Bob transfers funds to Dave as Alice's proxy 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
      "from": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      "to": "5DAAnrj7VHTznn2AWBemMuyBwZWs6FNFjdyVXUeYum3PTXFy",
    },
    "method": "Transfer",
    "section": "balances",
  },
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > proxy announcement lifecycle test > events when Alice rejects Bob's proxy call announcement 1`] = `[]`;

exports[`Westend Asset Hub Proxy > proxy announcement lifecycle test > events when Bob announces a proxy call 1`] = `
[
  {
    "data": {
      "callHash": "(hash)",
      "proxy": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
      "real": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "method": "Announced",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > proxy announcement lifecycle test > events when Bob performs the announced proxy call 1`] = `
[
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Westend Asset Hub Proxy > proxy announcement lifecycle test > events when Bob removes their proxy call announcement 1`] = `[]`;
